adding deploy.... wip
